Closed Bug 117948 Opened 24 years ago Closed 23 years ago

META HTTP-EQUIV=Window-target makes all links open new windows

Categories

(Core :: DOM: Navigation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bugs, Assigned: rpotts)

References

()

Details

Attachments

(2 files)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:0.9.7) Gecko/20011221 BuildID: 2001122108 If a page has a <META HTTP-EQUIV=Window-target CONTENT=anythinghere> in it's <HEAD></HEAD> tag group, any link or form will open up into a new window. Reproducible: Always Steps to Reproduce: 1. Pull up Schlock or use the included Test page 2. Click on a link 3. See the new window pop up. Actual Results: A new window pops up. Expected Results: IE/Netscape 4 semantics: Page loads in same window.
This will open up to Stalag '99 in a new window, with no help of a TARGET option to the <A> tag.
Indeed. See http://home.netscape.com/eng/mozilla/2.0/relnotes/demo/target.html for a description of Window-target. "Window-target: whatever" does not do the same thing as <base target="whatever">. Instead it retargets the _current_ load the the window named "whatever". Or, rather, that would be the correct behavior... The problem is in the HTML content sink, but this is a general architectural problem... Over to docshell, since most of the targeting I can find happens there, but punt as needed to whoever should actually be working on this...
Assignee: attinasi → adamlock
Status: UNCONFIRMED → NEW
Component: Layout → Embedding: Docshell
Ever confirmed: true
OS: Linux → All
QA Contact: petersen → adamlock
Hardware: PC → All
-> Rick
Assignee: adamlock → rpotts
The 'Window-Target' header should be *ignored* if it is incountered inside of a <META HTTP-EQUIV ...> tag. Our current architecture does not allow us to retarget a page load AFTER the content has been partially consumed by the content sink. -- rick
Comment on attachment 67473 [details] [diff] [review] remove processing of the Window-Target header from <META> tag r=bzbarsky
Attachment #67473 - Flags: review+
Comment on attachment 67473 [details] [diff] [review] remove processing of the Window-Target header from <META> tag sr=vidur
Attachment #67473 - Flags: superreview+
patch checked into the trunk.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: