bug #117948 (r=bzarsky@mit.edu, sr=vidur@netscape.com) Ignore the HTTP Window-Target header inside of <meta> tags